--- a/devel/boost-libs/Makefile
+++ b/devel/boost-libs/Makefile
@@ -1,9 +1,11 @@
 # Created by: Alexander Churanov <churanov.port.maintainer@gmail.com>
 
 PORTNAME=	boost-libs
-PORTREVISION=	6
 
 COMMENT=	Free portable C++ libraries (without Boost.Python)
+
+LICENSE=	BSL
+LICENSE_FILE=	${WRKDIR}/${DISTNAME}/LICENSE_1_0.txt
 
 BROKEN_sparc64=	https://github.com/boostorg/context/commit/f2ef6326b6ed
 
