--- a/devel/boost-python-libs/Makefile
+++ b/devel/boost-python-libs/Makefile
@@ -1,10 +1,13 @@
 # Created by: Alexander Churanov <churanov.port.maintainer@gmail.com>
 
 PORTNAME=	boost-libs
-PORTREVISION=	1
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
+PATCHDIR=	../boost-libs/files
 
 COMMENT=	Framework for interfacing Python and C++
+
+LICENSE=	BSL
+LICENSE_FILE=	${WRKDIR}/${DISTNAME}/LICENSE_1_0.txt
 
 BUILD_DEPENDS=	bjam:devel/boost-jam \
 		${PYNUMPY}
