audio/kwave: fix deps

--- a/audio/kwave/Makefile
+++ b/audio/kwave/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	audio kde kde-applications
 MAINTAINER=	kde@FreeBSD.org
 COMMENT=	Sound editor for KDE
 
-BUILD_DEPENDS=	convert:graphics/ImageMagick6
+BUILD_DEPENDS=	convert:graphics/ImageMagick${IMAGEMAGICK_DEFAULT}
 LIB_DEPENDS=	libaudiofile.so:audio/libaudiofile \
 		libFLAC.so:audio/flac \
 		libfftw3.so:math/fftw3 \
