www/piwigo: use PHP-provided sodium extension

--- a/www/piwigo/Makefile
+++ b/www/piwigo/Makefile
@@ -12,11 +12,9 @@ COMMENT=	PHP based Web Gallery
 LICENSE=	GPLv2
 LICENSE_FILE=	${WRKSRC}/doc/COPYING
 
-RUN_DEPENDS+=	${LOCALBASE}/lib/php/${PHP_EXT_DIR}/sodium.so:security/pecl-libsodium@${PHP_FLAVOR}
-
 USES=		cpe php:web,flavors zip
 USE_PHP=	ctype dom exif filter gd hash iconv json mbstring mysqli \
-		openssl pcre pdo session simplexml spl tokenizer xml zlib
+		openssl pcre pdo session simplexml sodium spl tokenizer xml zlib
 
 NO_ARCH=	yes
 NO_BUILD=	yes
